스프링 데이터 JPA

--- a/data-jpa/src/main/resources/application.yml
+++ b/data-jpa/src/main/resources/application.yml
@@ -13,6 +13,13 @@ spring:
 #        show_sql: true
         format_sql: true
 
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 2000
+        one-indexed-parameters: true
+
 logging:
   level:
     org.hibernate.SQL: debug  # logger를 통해 하이버네이트 실행 SQL을 남긴다
